# aggrefiles

./: README.md  pyproject.toml
aggrefiles/: __main__.py
